# teste-sistema-django

./: .gitignore  CODEOWNERS  Dockerfile  Makefile  docker-compose.yml  env.main  manage.py  pyproject.toml
api/: serializers.py  urls.py  views.py
aprender_sistema/: __init__.py  asgi.py  celery.py  settings.py  settings_production.py  urls.py  wsgi.py
core/: admin.py  apps.py  backends.py  forms.py  mcp_tools.py  mixins.py  models.py  serializers.py  signals.py  tasks.py  tests.py  tests_permissions.py  urls.py  validators.py  views.py  views_calendar.py
core/mcp/: __init__.py
core/middleware/: __init__.py  security.py
core/migrations/: 0001_initial.py  0002_aprovacao_disponibilidadeformadores_and_more.py  0003_deslocamento.py  0004_rf05_calendar_fields.py  0005_clear_formador_area_atuacao.py  0006_alter_formador_area_atuacao_to_group.py  0007_add_coordenador_permission.py  0008_add_performance_indexes.py  0009_setup_groups_permissions.py  0010_add_custom_permissions.py  0011_assign_permissions_to_groups.py  0012_add_usuario_to_formador.py  0013_remove_papel_field.py  0014_add_vinculado_superintendencia.py  0015_add_pre_agenda_status.py  0016_fix_tipo_evento_online_flags.py  0017_add_solicitacao_constraints.py  0018_usuario_cpf_usuario_municipio_usuario_telefone.py  0019_add_notification_models.py  0020_add_organizational_structure.py  0021_deslocamento_expansion.py  0022_remove_deslocamento_data_not_too_far_future_and_more.py  0023_remove_deslocamento_data_not_too_far_future_and_more.py  0028_add_missing_fields.py  0029_auto_20250925_1733.py
core/scripts/: criar_dados_teste_completos.py  gerar_dados_teste_completos.py  import_formadores.py  import_municipios.py  import_projetos.py  import_tiposdeevento.py
core/services/: __init__.py  advanced_security.py  analytics_dashboard.py  (+21 more)
docs/: ANALISE_ARQUIVOS_SISTEMA.md  ANALISE_EVENTOS_MULTIPLOS_PEDAGOGICOS.md  COMANDOS_DOCKER_OBRIGATORIOS.md  CONFIGURACAO_AMBIENTE_HIBRIDO.md  DASHBOARD_TESTS.md  DATA_POPULATION_REPORT.md  DOCUMENTACAO_PROJETO.md  ESTRATEGIA_BRANCHING_DESENVOLVIMENTO.md  FINAL_MIGRATION_REPORT.md  GRUPOS_ORGANIZACIONAIS.md  MEMORIA_SESSAO_2025-09-11.md  PERMISSION_SYSTEM_MIGRATION.md  REFINAMENTOS_MELHORES_PRATICAS.md  RELATORIO_VARREDURA_PLANILHA_2025.md  REPO_CLEANUP_ROADMAP.md  SPRINT_GAPS_CRITICOS_RELATORIO.md  ajustes_permissoes.md  alinhamento_conversa_vs_repo.md  auditoria_colecoes.md  auditoria_final_impl.md  auditoria_final_validada.md  auditoria_impl_vs_planilhas.md  auditoria_responsabilidades.md  auditoria_seguranca.md  auditoria_sheets_apps_script.md  checklist_smoketests.md  fluxo_aprovacao.md  gap_analysis_workflow_real.md  hierarquia_organizacional.md  melhorias_workflow_propostas.md  mini_commits_faltantes.md  mini_commits_organizacao.md  mini_commits_restantes.md  mini_commits_seguranca.md  mini_commits_sugeridos.md  relatorio_permissoes_menu.md  repo_cleanup_report_phase1.md  repo_cleanup_report_phase2.md  repo_cleanup_report_phase3.md  repo_cleanup_report_phase4_final.md  (+1 more)
nginx/: frontend.conf
scripts/: analise_completa_github.py  analise_duplicatas_otimizacao.py  analise_repositorio_github.py  deploy.sh  docker-run.sh  format.sh  git-flow.bat  git-flow.py  limpeza_completa_github.py  limpeza_organizacao_sistema.py  lint.sh  migrate.sh  setup.sh  switch-env.sh  test.sh
(+253 files in other folders)
